force-app/main/default/objects/Individual_Funding_Allocation__c/Individual_Funding_Allocation__c.object-meta.xml
<CustomObject>
    <description>To track the fundings allocated to students.</description>
    <label>Individual Funding Allocation</label>
    <nameField>
        <displayFormat>IFA-{00000}</displayFormat>
        <label>Individual Funding Allocation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Funding Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>