force-app/main/default/objects/Individual_Funding_Allocation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individual Funding Allocations</relationshipLabel>
    <relationshipName>Individual_Funding_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>