force-app/main/default/objects/Individual_Funding_Allocation__c/fields/Max_Per_Term__c.field-meta.xml
<CustomField>
    <fullName>Max_Per_Term__c</fullName>
    <description>The maximum amount that can be disbursed per academic term.</description>
    <inlineHelpText>The maximum amount that can be disbursed per academic term.</inlineHelpText>
    <label>Max Per Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>