force-app/main/default/objects/Individual_Funding_Allocation__c/fields/Study_Funding__c.field-meta.xml
<CustomField>
    <fullName>Study_Funding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Funding</label>
    <referenceTo>Study_Funding__c</referenceTo>
    <relationshipLabel>Individual Funding Allocations</relationshipLabel>
    <relationshipName>Individual_Funding_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>