force-app/main/default/objects/Individual_Funding_Allocation__c/fields/Study_Funding_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Funding_Name__c</fullName>
    <description>For funding disbursement flow to display lookup record name.</description>
    <formula>Study_Funding__r.Name</formula>
    <label>Study Funding Name</label>
    <type>Text</type>
</CustomField>