force-app/main/default/objects/Individual_Funding_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Study_Funding__c</columns>
    <columns>Amount__c</columns>
    <columns>Disbursed_Amount__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>