force-app/main/default/objects/Individual_Funding_Allocation__c/listViews/All_Active_Funding_Allocations.listView-meta.xml
<ListView>
    <fullName>All_Active_Funding_Allocations</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Study_Funding__c</columns>
    <columns>Amount__c</columns>
    <columns>Disbursed_Amount__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Funding Allocations</label>
</ListView>